# ENGLISH_CHALLENGE

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  quartowidget.cpp  quartowidget.h
